# DREKF2026

./: .gitignore  README.md  common_utils.py  main0_CT3D.py  main0_withFW_CT_4.py  main1_timeCT3D.py  plot0_CT.py  plot0_CT3D.py  plot0_withFW_CT_4.py  plot1_timeCT3D.py  video0_CT3D.py  video0_withFW_CT3D.py
estimator/: DR_EKF_CDC.py  DR_EKF_TAC.py  EKF.py  base_filter.py
estimator/cpp/: CMakeLists.txt
estimator/cpp/include/dr_ekf/: dr_ekf_cdc.h  dr_ekf_tac.h  dynamics.h  mosek_sdp_solver.h
estimator/cpp/src/: bindings.cpp  dr_ekf_cdc.cpp  dr_ekf_tac.cpp  ekf.cpp  mosek_sdp_solver.cpp
estimator/cpp/tests/: test_equivalence.py
